--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.3.2",
+    "nextjs-cors": "^2.1.2",
     "primeicons": "^6.0.1",
     "primereact": "^9.3.1",
     "react": "18.2.0",
